--- a/angular.json
+++ b/angular.json
@@ -44,6 +44,20 @@
           },
           "configurations": {
             "production": {
+              "fileReplacements": [
+      {
+        "replace": "src/environments/environment.ts",
+        "with": "src/environments/environment.production.ts"
+      }
+    ],
+    "optimization": true,
+    "outputHashing": "all",
+    "sourceMap": false,
+    "extractCss": true,
+    "namedChunks": false,
+    "aot": true,
+    "buildOptimizer": true,
+    "serviceWorker": true,
               "budgets": [
                 {
                   "type": "initial",
@@ -73,6 +87,7 @@
               ]
             }
           },
+
           "defaultConfiguration": "production"
         },
         "serve": {
