--- a/angular.json
+++ b/angular.json
@@ -69,7 +69,7 @@
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.production.ts"
+                  "with": "src/environments/environment.ts"
                 }
               ]
             }
